# contiguous-sized

./: README.md  changelog.md  contiguous-sized.cabal
src/Data/Primitive/Contiguous/: Sized.hs
