cabal-version: 2
name: contiguous-sized
version: 0.1.0.0
homepage: https://github.com/mckeankylej/contiguous-sized
bug-reports: https://github.com/mckeankylej/contiguous-sized/issues
author: Alice McKean
maintainer: mckean.kylej@gmail.com
copyright: 2019 Daniel Cartwright, 2019 Alice McKean
license: BSD3
license-file: LICENSE
build-type: Simple
extra-source-files: README.md
synopsis: Unified interface for sized primitive arrays
category: Array,Data,Primitive
description:
  This package provides a typeclass `Contiguous` that offers a
  unified interface to working with sized indexed `Array`, `SmallArray`,
  `PrimArray`, and `UnliftedArray`.

source-repository head
  type: git
  location: https://github.com/mckeankylej/contiguous-sized

library
  exposed-modules:
    Data.Primitive.Contiguous.Sized
  hs-source-dirs: src
  build-depends:
      base >=4.11.1.0 && <5
    , deepseq >= 1.4
    , primitive >= 0.7 && < 0.8
    , primitive-unlifted >= 0.1 && < 0.2
    , contiguous >= 0.5 && < 0.6
    , natural-arithmetic >= 0.1 && < 0.2
  default-language: Haskell2010
  ghc-options: -O2 -Wall

test-suite unit-tests
  type: exitcode-stdio-1.0
  main-is: UnitTests.hs
  hs-source-dirs: test
  build-depends:
      base
    , contiguous
    , contiguous-sized
    , primitive
    , vector
    , QuickCheck
    , quickcheck-instances
  default-language: Haskell2010
  ghc-options: -O2 -Wall

test-suite laws
  type: exitcode-stdio-1.0
  main-is: Laws.hs
  hs-source-dirs: test
  build-depends:
      base
    , contiguous
    , primitive
    , vector
    , QuickCheck
    , quickcheck-instances
    , quickcheck-classes
  default-language: Haskell2010
  ghc-options: -O2 -Wall

benchmark weigh
  type: exitcode-stdio-1.0
  build-depends:
      base
    , primitive
    , contiguous
    , weigh
    , random
    , random-shuffle
  default-language: Haskell2010
  hs-source-dirs: bench
  main-is: Main.hs
  ghc-options: -O2
